--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,14 @@
   .travigo-text {
     @apply text-5xl font-bold lg:text-4xl md:text-3xl text-slate-900 filter drop-shadow-lg
   }
+  /* Scroll bar hidden */
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+
+/* For IE, Edge and Firefox */
+  .scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 }
